# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]


## [2.27.1] - 2025-06-13
### Fixed
- [API_PARSER] [TRENDMICRO_VISIONONE] Avoid delays on log collection, depending on log types


## [2.27.0] - 2025-06-10
### Added
- [VULTURED] Delay option on api_request calls
- [FRONTEND] Rsyslog queue settings
- [API_PARSER] [UBIKA] New collector
### Changed
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Add organisation id and name in output logs
- [APPLICATIONS] [LOGOMELASTICSEARCH] Allow use of a TLS Profile instead of a simple X509 Certificate
- [SYSTEM] [TLS_PROFILE] Reorder parameters into 2 separate sections
### Fixed
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Fix parsing of support session logs
- [API_PARSER] [PERCEPTION_POINT_X_RAY] Improve error message
- [API_PARSER] [GATEWATCHER_ALERTS] Update endpoint of the API
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Ensure all attributes always have the correct type in code
- [API_PARSER] [CISCO_UMBRELLA] Avoid never-ending collect
- [API] [X509CERTIFICATE] Avoid conflicts when requesting a specific certificate


## [2.26.1] - 2025-05-21
### Fixed
- [API_PARSER] [TRENDMICRO_VISIONONE] Last api call was not updated
- [API_PARSER] [CORTEX_XDR] Last api call was not updated


## [2.26.0] - 2025-05-16
### Added
- [API_PARSER] [HORNETSECURITY] New collector
- [GUI] Middle click to edit an object in a new tab
- [SCRIPT] [WIPE] New script to reset a bootstrapped node
### Fixed
- [PORTAL] [SELF_SERVICE] Disabled workflows listed
- [MONGODB] Allow clusters with more than 7 nodes
- [SERVICES] [FRONTEND] Correctly get Darwin objects when building rsyslog configurations
- [GUI] [RSYSLOG] Bring more details on GUI when configuration builds fail
- [SERVICES] [FRONTEND] Improve deletion messages and conditions on GUI and API